--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,14 @@
         <section class="bg-blue-300 w-9/12 mx-auto mt-12 p-8 rounded-xl">
             <h3 class="text-3xl font-semibold mb-4">Please Login</h3>
             <div>
-                <input class="w-9/12 block mb-4 px-4 py-2" type="email" name="" id="" placeholder="Enter Email">
-                <input class="w-9/12 block mb-4 px-4 py-2" type="password" name="" id="" placeholder="Enter Password">
+                <input id="user-email" class="w-9/12 block mb-4 px-4 py-2" type="email" name="" id="" placeholder="Enter Email">
+                <input  id="user-password" class="w-9/12 block mb-4 px-4 py-2" type="password" name="" id="" placeholder="Enter Password">
 
-                <button class="bg-green-500 px-5 py-3 rounded-xl text-2xl font-bold text-white hover:bg-blue-700">Submit</button>
+                <button id="submit-btn" class="bg-green-500 px-5 py-3 rounded-xl text-2xl font-bold text-white hover:bg-blue-700">Submit</button>
             </div>
         </section>
     </main>
+
+    <script src="./main.js"></script>
 </body>
 </html>
