--- a/src/account.html
+++ b/src/account.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="bg-violet-600 p-8 rounded-xl">
                     <h3 class="text-3xl mb-2">Balance</h3>
-                    <h2  class="text-5xl">$1240</h2>
+                    <h2  class="text-5xl">$<span id="total-balance">1240</span> </h2>
                 </div>
             </div>
         </section>
