Baap Er Bank is completed successfully

--- a/src/account.html
+++ b/src/account.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="bg-red-600 p-8 rounded-xl">
                     <h3 class="text-3xl mb-2">Withdraw</h3>
-                    <h2  class="text-5xl">$10</h2>
+                    <h2  class="text-5xl">$<span id="total-withdraw">00</span> </h2>
                 </div>
                 <div class="bg-violet-600 p-8 rounded-xl">
                     <h3 class="text-3xl mb-2">Balance</h3>
@@ -52,5 +52,6 @@
     </main>
 
     <script src="./deposit.js"></script>
+    <script src="./withdraw.js"></script>
 </body>
 </html>
