--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
                 <button id="submit-btn" class="bg-green-500 px-5 py-3 rounded-xl text-2xl font-bold text-white hover:bg-blue-700">Submit</button>
             </div>
         </section>
+        <section>
+            <p>Email: sontan@baap.com </p>
+            <p>Password: secret</p>
+        </section>
     </main>
 
     <script src="./main.js"></script>
